# book-translator-ai

./: .gitignore  LICENSE  Readme.md  _test_settings.py  agent.md  main.py  opencode.json  plan.md  pyproject.toml  test_parser.py
core/: config.py  glossary.py  models.py
exporters/: __init__.py  comparison_exporter.py  markdown_exporter.py
gui/: i18n.py  main_window.py  theme.py  worker.py
gui/widgets/: book_loader.py  comparison_panel.py  glossary_dialog.py  glossary_panel.py  page_editor.py  paragraph_editor.py  settings_panel.py  translation_panel.py
parsers/: __init__.py  base.py  epub_parser.py  fb2_parser.py  import_parser.py  markdown_import_parser.py  pdf_parser.py  txt_parser.py
state/: database.py  schema.py
translator/: chunker.py  context_builder.py  engine.py  prompt_builder.py
utils/: hash_utils.py  lang_utils.py  page_splitter.py
