[project]
name = "book-translator"
version = "0.1.0"
description = "Desktop book translator using LLM"
requires-python = ">=3.12"
dependencies = [
    "PyQt6>=6.7",
    "qasync>=0.27",
    "litellm>=1.40",
    "ebooklib>=0.18",
    "PyMuPDF>=1.24",
    "lxml>=5.2",
    "pydantic>=2.7",
    "aiofiles>=24.1",
    "loguru>=0.7",
    "markdown>=3.6",
    "langdetect>=1.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.4",
    "mypy>=1.10",
]
